# multidata-rag-project

./: .env.example  .gitignore  DEPLOYMENT_FIXES.md  Dockerfile  Dockerfile.lambda  README.md  docker-compose.yml  pyproject.toml  requirements.txt  s3-cache-policy.json  supabase_con_test.py
.github/workflows/: deploy.yml
app/: config.py  logging_config.py  main.py
app/services/: document_service.py  embedding_service.py  rag_service.py  sql_service.py  vector_service.py
notebooks/: vanna_ai_text_to_sql_complete.ipynb
